// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard-grid render default 1`] = `

<div>
  <div class="flex flex-col grow bg-secondary dark:bg-black px-8 py-8">
    <div class="flex gap-2 mb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items
      >
      </gui-filter-search>
      <gui-sorting-toggle
        filtereditems
        sortkey="name"
      >
      </gui-sorting-toggle>
    </div>
    <div class="flex flex-col">
      <p class="text-sm font-semibold mb-4">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <p>
          No projects found
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`dashboard-grid with results 1`] = `

<div>
  <div class="flex flex-col grow bg-secondary dark:bg-black px-8 py-8">
    <div class="flex gap-2 mb-8">
      <gui-filter-search
        placeholder="Filter Projects"
        items="[object Object],[object Object]"
      >
      </gui-filter-search>
      <gui-sorting-toggle
        filtereditems="[object Object],[object Object]"
        sortkey="name"
      >
      </gui-sorting-toggle>
    </div>
    <div class="flex flex-col">
      <p class="text-sm font-semibold mb-4">
        Projects
      </p>
      <div class="flex flex-row flex-wrap gap-8">
        <a
          href="#"
          class="border-[1px] rounded-lg w-full md:w-96 hover:border-muted-foreground/50 transition-all duration-250 bg-card"
        >
          <div class="flex flex-col items-start h-20 justify-between px-4 py-3">
            <div class="flex flex-row w-full items-center justify-end">
              <div class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </div>
            </div>
            <div class="flex">
              <gui-card-title classname="self-end text-md font-medium">
                project-bar
              </gui-card-title>
            </div>
          </div>
          <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate">
                  /home/user/project-bar
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  /home/user/project-bar
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="flex gap-2">
              <div class="flex-none bg-secondary rounded-xl px-2 py-1">
                <p class="text-[0.7rem] font-medium text-primary ">
                  pnpm
                </p>
              </div>
            </div>
          </div>
        </a>
        <a
          href="#"
          class="border-[1px] rounded-lg w-full md:w-96 hover:border-muted-foreground/50 transition-all duration-250 bg-card"
        >
          <div class="flex flex-col items-start h-20 justify-between px-4 py-3">
            <div class="flex flex-row w-full items-center justify-end">
              <div class="text-[0.7rem] text-muted-foreground">
                November 1st, 2024 | 06:01 PM
              </div>
            </div>
            <div class="flex">
              <gui-card-title classname="self-end text-md font-medium">
                project-foo
              </gui-card-title>
            </div>
          </div>
          <div class="w-full h-12 flex items-center gap-4 justify-between border-t-[1px] px-4 py-3">
            <gui-tooltip-provider>
              <gui-tooltip>
                <gui-tooltip-trigger classname="rounded-sm border-[1px] px-2 py-1 text-[0.65rem] text-muted-foreground font-mono m-0 align-baseline truncate">
                  /home/user/project-foo
                </gui-tooltip-trigger>
                <gui-tooltip-content>
                  /home/user/project-foo
                </gui-tooltip-content>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="flex gap-2">
              <div class="flex-none bg-secondary rounded-xl px-2 py-1">
                <p class="text-[0.7rem] font-medium text-primary ">
                  node
                </p>
              </div>
              <div class="flex-none bg-secondary rounded-xl px-2 py-1">
                <p class="text-[0.7rem] font-medium text-primary ">
                  vlt
                </p>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>

`;
